--- a/tribuzen-landing/src/components/Footer/style.scss
+++ b/tribuzen-landing/src/components/Footer/style.scss
@@ -17,7 +17,7 @@
   &__branding {
     img {
       height: 40px;
-      margin-bottom: var(--space-xs);
+      margin: var(--space-xs) auto;
     }
 
     p {
