--- a/tribuzen-landing/src/components/SectionStory/style.scss
+++ b/tribuzen-landing/src/components/SectionStory/style.scss
@@ -3,8 +3,8 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background: #fbeee6;
-  color: #333;
+  background: var(--color-bg-story);
+  color: var(--color-text-primary);
 
   &__container {
     display: flex;
