--- a/tribuzen-landing/src/components/SectionTimeline/style.scss
+++ b/tribuzen-landing/src/components/SectionTimeline/style.scss
@@ -1,12 +1,12 @@
 .timeline {
-  background: #fffdfc;
+  background: var(--color-bg-timeline);
   padding: 6rem 2rem;
   text-align: center;
 
   h2 {
     font-size: 2.5rem;
     margin-bottom: 3rem;
-    color: #333;
+    color: var(--color-text-primary);
   }
 
   &__list {
@@ -14,16 +14,14 @@
     margin: 0 auto;
     list-style: none;
     padding: 0;
-    position: relative;
-
-    &::before {
+    position: relative;    &::before {
       content: '';
       position: absolute;
       top: 0;
       left: 15px;
       width: 2px;
       height: 100%;
-      background: #f6c6b2;
+      background: var(--color-accent);
     }
   }
 
@@ -35,33 +33,31 @@
     padding-left: 3rem;
     text-align: left;
   }
-
   &__dot {
     width: 15px;
     height: 15px;
     border-radius: 50%;
-    background: #f6c6b2;
+    background: var(--color-accent);
     position: absolute;
     left: 7px;
     top: 5px;
   }
-
   &__content {
     h3 {
       margin: 0;
       font-size: 1.3rem;
-      color: #333;
+      color: var(--color-text-primary);
     }
 
     .timeline__date {
       font-size: 0.95rem;
-      color: #999;
+      color: var(--color-text-lighter);
       margin-bottom: 0.5rem;
     }
 
     p {
       font-size: 1.05rem;
-      color: #555;
+      color: var(--color-text-secondary);
     }
   }
 }
