--- a/tribuzen-landing/src/components/SectionVision/style.scss
+++ b/tribuzen-landing/src/components/SectionVision/style.scss
@@ -13,13 +13,12 @@
     padding: 2rem;
     border-radius: 1rem;
   }
-
   &__text {
-    font-family: 'Manrope', sans-serif;
+    font-family: var(--font-main);
     font-size: 2rem;
     text-align: center;
     line-height: 1.6;
-    color: #333;
+    color: var(--color-text-primary);
     opacity: 0;
 
     p {
